--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,9 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@now/node"
+        "use": "@vercel/node"
       }
-    ]
+    ],
+    "routes":[{"src":"/(.*)","dest":"/"}]
   }
   
